# deepfake-detection

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app_streamlit.py  create_dummy_data.py  dataset.py  docker-compose.yml  evaluate.py  packages.txt  pyproject.toml  requirements.txt  run_preprocessing.py  train.py
.github/workflows/: ci.yml  codeql.yml
ai_engine/audio/: spectrogram_cnn.py
ai_engine/datasets/: cache.py  duplicates.py  normalizer.py  parser.py  registry.py  reporter.py  splitter.py  statistics.py  validator.py  versioning.py
ai_engine/fusion/: late_fusion.py
ai_engine/preprocessing/: __init__.py  audio_extractor.py  face_detector.py
ai_engine/training/: dataset.py
ai_engine/video/: resnet.py
ai_engine/xai/: gradcam.py
app/: app.py  main.py
app/agent/: forensic_agent.py  knowledge_base.py
app/config/: config.py  constants.py
app/database/: connection.py  models.py
app/middleware/: security.py
app/routes/: agent.py  health.py  history.py  models.py  predict.py  report.py  upload.py
app/schemas/: api_schemas.py
app/services/: inference.py
app/utils/: bootstrap.py  crypto.py  device.py  exceptions.py  logging.py  media.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INSTALLATION.md  PRODUCTION_READINESS.md
monitoring/prometheus/: prometheus.yml
results/: README.md
scripts/: bootstrap_dataset.py  setup_dev.ps1  setup_dev.sh
tests/: test_agent.py  test_api.py  test_normalizer.py  test_phase2_advanced.py  test_predict_live.py  test_splitter.py  test_validator.py  test_versioning.py
